Fixed #8412 - TOC's couple of issues with overlapped header

--- a/src/common-styles/sv-navigation-toc.scss
+++ b/src/common-styles/sv-navigation-toc.scss
@@ -69,7 +69,3 @@
   overflow-y: auto;
   top: 0;
 }
-
-.sv-header__overlap~div .sv_progress-toc:not(.sv_progress-toc--mobile) {
-  margin-top: calcSize(14);
-}
